# blendplot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  compile_commands.json  generate_bindings.py  setup.py
src/: CMakeLists.txt  artists.h  axis.h  blendplot.cpp  canvas.h  colors.h  common.h  font_manager.h  pyblend2d.cpp  test_blend2d.cpp  transform.h  turbo_cmap.h
src/.clangd/index/: turbo_cmap.h.C63F03CDCC336088.idx
